# Pedestrian360

./: README.md
calibration/: calibrate_extrinsics.py  calibration.py  camera.py  g2o_optimize.py  my_intrinsics.yaml  visualization.py
calibration/results/: BAffineLX.txt  RAffineLX.txt
server/: server.py
video_stitching/: CMakeLists.txt  CameraParameter.cpp  CameraParameter.h  Consts.h  MySeamFinder.cpp  MySeamFinder.h  Projector.cpp  Projector.h  Sticher.cpp  Sticher.h  multiThread.cpp
video_stitching/resources/calibration_data/: FAffineLX.txt  LAffineLX.txt
